Designs issues fixes and missing JS added for DASHBOARd

--- a/wp-content/themes/gsn/work-assets/scss/dashboard/components/_global.scss
+++ b/wp-content/themes/gsn/work-assets/scss/dashboard/components/_global.scss
@@ -46,6 +46,12 @@ select {
   }
 }
 
+.dash-custom__messenger {
+  position: fixed !important;
+  right: 3px;
+  bottom: 3px;
+}
+
 label.error {
   color: red;
   display: block;
