--- a/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/_global.scss
+++ b/wp-content/themes/gsn/work-assets/scss/COMMON-STYLES-DEFINATIONS/_global.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
     Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
