--- a/wp-content/themes/gsn/work-assets/scss/dashboard/dashboard/_dashboard-header.scss
+++ b/wp-content/themes/gsn/work-assets/scss/dashboard/dashboard/_dashboard-header.scss
@@ -46,7 +46,8 @@ section {
 			font-weight: bold;
 			line-height: 1;
 			margin-left: 20px;
-			text-transform: uppercase;			
+			text-transform: uppercase;		
+			color: white;	
 		}
 	}
 }
@@ -99,7 +100,7 @@ section {
 					background: $brick_red;
 					left: 0;
 					top: 0;
-					transition: all 0.2s ease-in-out;
+					@include transition;
 				}
 				&:hover {
 					overflow: visible;
@@ -196,7 +197,10 @@ section {
 	opacity: 0;
 	visibility: hidden;
 	transform: translateY(10px);
-	transition: all 0.2s ease-in-out;
+	display: flex;
+	align-items: center;
+	height: 100%;
+	@include transition;
 
 	span {
 		background: rgba(0, 0, 0, 0.5);
@@ -205,6 +209,7 @@ section {
 		margin-left: 8px;
 		border-radius: 4px;
 		position: relative;
+		line-height: 1.5;
 
 		&:before {
 			content: '';
