--- a/wp-content/themes/gsn/work-assets/scss/dashboard/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assets/scss/dashboard/dashboard/_dashboard-landing.scss
@@ -11,6 +11,7 @@
     font-size: rem($fs-small);
     padding: 15px 20px;
     margin: 0 15px 30px;
+    border-radius: 4px;
     
     @include max-screen($mq-tablet) {
       margin: 0 10px 30px;
@@ -27,37 +28,53 @@
     }
   }
   input[type="text"] {
-    padding: 7px 15px;
+    padding: 7px 10px;
+    border-radius: 4px;
   }
   select {
-    padding: 5px 12px;
+    padding: 5px 10px;
     height: auto !important;
+    border-radius: 4px;
+    font-size: rem($fs-small);
   }
   textarea {
     min-height: 100px;
+    border-radius: 4px;
+    padding: 5px 10px;
+  }
+
+  .user-notification {
+    margin-bottom: 25px;
   }
 
   .dashboard__info-content {
     background: #ececec;
     margin-bottom: 30px;
-    padding: 30px 20px;
+    padding: 25px 20px 15px;
+    line-height: 1.2;
+    border-radius: 4px;
 
     h5 {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      font-weight: $fw-reg;
+      font-size: rem($fs-body);      
 
       span {
         text-transform: uppercase;
-        font-weight: bold;
+        font-weight: $fw-bold;
+        margin-left: 5px;
+        border-bottom: 2px solid #373a3c;
       }
     }
     .plan-info--user {      
 
       li {
-        margin-right: 6px;
+        margin-right: 5px;
         background: #b5b5b5;
-        padding: 5px 15px;
-        color: $white;
+        padding: 10px 20px;
+        color: #fff;
         margin-bottom: 15px;
+        border-radius: 4px;
 
         span {
           font-weight: bold;
@@ -187,6 +204,8 @@
       padding: 25px;
       display: block;
       height: 100%;
+      border-radius: 4px;
+      overflow: hidden;
 
       @include max-screen($mq-tablet) {        
         padding: 20px 15px;
@@ -206,9 +225,10 @@
         font-weight: bold;
       }
       h2 {
-        margin-top: 5px;
-        text-transform: uppercase;
-        font-size: rem($fs-body);
+        margin-top: 15px;
+        font-size: rem($fs-small);
+        font-weight: $fw-sbold;
+        line-height: 1.2;
       }
       &:after {
         content: '';
@@ -219,7 +239,8 @@
         position: absolute;
         background: $petal_green;
         z-index: 1;
-        transition: all 0.2s ease-in-out;
+        border-radius: 4px;
+        @include transition;
 
         @include max-screen($mq-tablet) {
           left: 10px;
@@ -236,16 +257,20 @@
   }
 }
 .custom-pagination {
+  margin-top: 15px;
+  padding: 0 15px;
   font-size: rem($fs-sbody);
 
   span.page-numbers.page-num {
     background-color: $lighter_gray;
     padding: 7px 20px;
     margin-right: 20px;
+    border-radius: 4px;
   }
   a.page-numbers {
     border: 1px solid $lighter_gray;
     padding: 5px 12px;
+    border-radius: 4px;
 
     &:hover {
       background-color: $lighter_gray;
@@ -253,6 +278,7 @@
   }
   .page-numbers.current {
     padding: 6px 13px;
+    font-weight: $fw-bold;
   }
   a.next.page-numbers, a.prev.page-numbers {
     font-size: 0;
