--- a/wp-content/themes/gsn/work-assets/scss/dashboard/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/dashboard/style.scss
@@ -8,6 +8,7 @@
 
 /* ====== Import COMPONENT CSS ====== */
 @import "components/global";
+@import "components/button";
 @import "components/alert";
 @import "components/pagination";
 /* ====== Import COMPONENT CSS END ====== */
