custom modal created

--- a/wp-content/themes/gsn/work-assets/scss/landing/style.scss
+++ b/wp-content/themes/gsn/work-assets/scss/landing/style.scss
@@ -17,6 +17,7 @@
 @import "components/input";
 @import "components/card";
 @import "components/buttons";
+@import "components/modal";
 
 @import "layouts/header";
 @import "layouts/footer";
